assert-struct/tests/snapshots/wildcard_struct__wildcard_struct_failure.snap
---
source: assert-struct/tests/wildcard_struct.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/wildcard_errors/wildcard_struct_failure.rs:28:20
   |
28 |             value: 20,  // This should fail
   |                    ^^ got 10
